# speechmatics-academy

./: .gitignore  README.md  ruff.toml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: community-project-proposal.yml
.github/PULL_REQUEST_TEMPLATE/: community-project.md
.github/scripts/: check_community_structure.py  check_structure.py
.github/workflows/: ci.yml  dependabot-auto-merge.yml  welcome.yml
basics/01-hello-world/: README.md
basics/02-batch-vs-realtime/: README.md
basics/03-configuration-guide/: README.md
basics/04-audio-intelligence/: README.md
basics/05-multilingual-translation/: README.md
basics/06-text-to-speech/: README.md
basics/07-turn-detection/: README.md
basics/08-voice-agent-turn-detection/: .env.example  README.md
basics/09-voice-agent-speaker-focus/: README.md
basics/09-voice-agent-speaker-id/: README.md
basics/10-channel-diarization/: README.md  requirements.txt
basics/10-diarization-deep-dive/: .env.example
basics/11-voice-api-explorer/: .env.example  README.md
basics/12-melia-multilingual/: .env.example  README.md
community/: COMMUNITY_TEMPLATE.md  README.md
docs/: CONTRIBUTING.md  EXAMPLE_TEMPLATE.md  MIGRATION_TEMPLATE.md  index.yaml
integrations/: README.md
integrations/pipecat/02-simple-voice-bot-web/: .env.example  README.md  pyproject.toml
integrations/pipecat/02-simple-voice-bot-web/assets/: agent.md
integrations/pipecat/02-simple-voice-bot-web/python/: main.py  requirements.txt
use-cases/01-medical-transcription-realtime/: README.md
use-cases/02-video-captioning/: README.md
(+198 files in other folders)
